# embedded-project

./: CMakeLists.txt  README.md
include/: config.h  cpuCore.h  gpio.h  memory.h  peripherals.h  rtos.h  scheduler.h  tempControl.h  trafficLight.h  utility.h
src/: cpuCore.cpp  gpio.cpp  main.cpp  memory.cpp  peripherals.cpp  rtos.cpp  scheduler.cpp  tempControl.cpp  trafficLight.cpp  utility.cpp
